// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snaphsots should render background style selector 1`] = `
<div
  className="interactive-map widget-map widget-map--layerstree-is-visible"
>
  <p>
    BackgroundStyles
  </p>
  <div
    className="view-details "
  >
    <button
      className="bp3-button view-details__close-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="bp3-icon bp3-icon-cross"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`snaphsots should render correctly 1`] = `
<div
  className="interactive-map widget-map widget-map--layerstree-is-visible"
>
  <div
    className="view-details "
  >
    <button
      className="bp3-button view-details__close-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="bp3-icon bp3-icon-cross"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`snaphsots should render correctly with a map navigation 1`] = `
<div
  className="interactive-map widget-map widget-map--layerstree-is-visible"
>
  <p>
    MapNavigation
  </p>
  <div
    className="view-details "
  >
    <button
      className="bp3-button view-details__close-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="bp3-icon bp3-icon-cross"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`snaphsots should render correctly with details 1`] = `
<div
  className="interactive-map widget-map widget-map--layerstree-is-visible"
>
  <div
    className="view-details view-details--visible"
  >
    <button
      className="bp3-button view-details__close-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="bp3-icon bp3-icon-cross"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`snaphsots should render correctly with hidden map navigation 1`] = `
<div
  className="interactive-map widget-map "
>
  <p>
    MapNavigation
  </p>
  <div
    className="view-details "
  >
    <button
      className="bp3-button view-details__close-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="bp3-icon bp3-icon-cross"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`snaphsots should render legends 1`] = `
<div
  className="interactive-map widget-map widget-map--layerstree-is-visible"
>
  <p>
    MapNavigation
  </p>
  <div
    className="widget-map__legends"
  >
    <div
      className="tf-legend"
    >
      <h4
        className="tf-legend__title"
      >
        foo
      </h4>
    </div>
  </div>
  <div
    className="view-details "
  >
    <button
      className="bp3-button view-details__close-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="bp3-icon bp3-icon-cross"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71L9.41 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
